// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when key in the set argument is invalid should print the error 1`] = `
"[31merror[39m - Component value resolve failed
[90mGenerateError: Component value resolve failed
    Path: <PROJECT_ROOT>/packages/cli/integration/generate-cjs/components/nginx.js
    Cause: CLIError: Lexical error on line 1. Unrecognized text.
$.tolerations[?@.key=='key2'].valu
--------------^
        at Object.reduce (~/Projects/kosko/packages/cli/dist/commands/generate/set-option.js:93:31)
        at ~/Projects/kosko/packages/env/dist/reduce.js:5:57
        at Array.reduce (<anonymous>)
        at reduce (~/Projects/kosko/packages/env/dist/reduce.js:5:21)
        at reduce (~/Projects/kosko/packages/env/dist/environment/base.js:75:56)
        at Object.component (~/Projects/kosko/packages/env/dist/environment/base.js:18:30)
        at Object.<anonymous> (~/Projects/kosko/packages/cli/integration/generate-cjs/components/nginx.js:3:38)
    at getComponentValue (~/Projects/kosko/packages/generate/dist/generate.js:27:15)
    at async generate (~/Projects/kosko/packages/generate/dist/generate.js:70:61)
    at async handler (~/Projects/kosko/packages/cli/dist/commands/generate/worker.js:23:20)
    at async Object.handler (~/Projects/kosko/packages/cli/dist/commands/generate/command.js:79:9)[39m"
`;

exports[`when multiple set arguments are provided should output YAML 1`] = `
"---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: overridden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx.io/nginx
      tolerations:
        - key: key1
          operator: Equal
          value: value1
          effect: NoSchedule
        - key: key2
          operator: Equal
          value: newValue
          effect: NoExecute
        - key: key3
          operator: Equal
          value: value3
          effect: NoSchedule
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80"
`;

exports[`when nested value in the set argument is invalid should print the error 1`] = `
"kosko generate [components..]

Generate Kubernetes manifests

Positionals:
  components  Components to generate. This overrides components set in config
              file.                                        [array] [default: []]

Global Options:
      --cwd        Path of working directory             [string] [default: CWD]
      --log-level  Set log level                      [string] [default: "info"]
      --silent     Disable log output                 [boolean] [default: false]
      --help       Show help                                           [boolean]
      --version    Show version number                                 [boolean]

Options:
  -e, --env       Environment name                                      [string]
  -c, --config    Config path. Default to \`kosko.toml\` in current folder.
                                                                        [string]
  -r, --require   Require modules. Modules set in config file will also be
                  required.                                [array] [default: []]
      --loader    Module loader. Loaders set in config file will also be loaded.
                                                           [array] [default: []]
      --bail      Stop immediately when an error occurred.             [boolean]
  -s, --set       Set values on the command line KEY=VAL (can be used multiple
                  times)                                   [array] [default: []]
  -o, --output    Output format
                            [string] [choices: "yaml", "json"] [default: "yaml"]
      --validate  Validate components                  [boolean] [default: true]

Examples:
  kosko generate                      Generate manifests
  kosko generate foo bar              Specify components
  kosko generate foo_*                Use glob pattern
  kosko generate --env foo            Set environment
  kosko generate -r ts-node/register  Require external modules

The specified value "3" is not a string."
`;

exports[`when output = json should output JSON 1`] = `
"{
  "apiVersion": "v1",
  "kind": "List",
  "items": [
    {
      "apiVersion": "apps/v1",
      "kind": "Deployment",
      "metadata": {
        "name": "nginx",
        "labels": {
          "env": "dev"
        }
      },
      "spec": {
        "replicas": 1,
        "selector": {
          "matchLabels": {
            "app": "nginx"
          }
        },
        "template": {
          "metadata": {
            "labels": {
              "app": "nginx"
            }
          },
          "spec": {
            "containers": [
              {
                "name": "nginx",
                "image": "docker.io/nginx"
              }
            ],
            "tolerations": [
              {
                "key": "key1",
                "operator": "Equal",
                "value": "value1",
                "effect": "NoSchedule"
              },
              {
                "key": "key2",
                "operator": "Equal",
                "value": "value2",
                "effect": "NoExecute"
              },
              {
                "key": "key3",
                "operator": "Equal",
                "value": "value3",
                "effect": "NoSchedule"
              }
            ]
          }
        }
      }
    },
    {
      "apiVersion": "v1",
      "kind": "Service",
      "metadata": {
        "name": "nginx"
      },
      "spec": {
        "selector": {
          "app": "nginx"
        },
        "ports": [
          {
            "port": 80
          }
        ]
      }
    }
  ]
}"
`;

exports[`when output = yaml should output YAML 1`] = `
"---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/nginx
      tolerations:
        - key: key1
          operator: Equal
          value: value1
          effect: NoSchedule
        - key: key2
          operator: Equal
          value: value2
          effect: NoExecute
        - key: key3
          operator: Equal
          value: value3
          effect: NoSchedule
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80"
`;

exports[`when output is invalid should print the error 1`] = `
"kosko generate [components..]

Generate Kubernetes manifests

Positionals:
  components  Components to generate. This overrides components set in config
              file.                                        [array] [default: []]

Global Options:
      --cwd        Path of working directory             [string] [default: CWD]
      --log-level  Set log level                      [string] [default: "info"]
      --silent     Disable log output                 [boolean] [default: false]
      --help       Show help                                           [boolean]
      --version    Show version number                                 [boolean]

Options:
  -e, --env       Environment name                                      [string]
  -c, --config    Config path. Default to \`kosko.toml\` in current folder.
                                                                        [string]
  -r, --require   Require modules. Modules set in config file will also be
                  required.                                [array] [default: []]
      --loader    Module loader. Loaders set in config file will also be loaded.
                                                           [array] [default: []]
      --bail      Stop immediately when an error occurred.             [boolean]
  -s, --set       Set values on the command line KEY=VAL (can be used multiple
                  times)                                   [array] [default: []]
  -o, --output    Output format
                            [string] [choices: "yaml", "json"] [default: "yaml"]
      --validate  Validate components                  [boolean] [default: true]

Examples:
  kosko generate                      Generate manifests
  kosko generate foo bar              Specify components
  kosko generate foo_*                Use glob pattern
  kosko generate --env foo            Set environment
  kosko generate -r ts-node/register  Require external modules

Invalid values:
  Argument: output, Given: "foo", Choices: "yaml", "json""
`;

exports[`when output is not set should output YAML 1`] = `
"---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: docker.io/nginx
      tolerations:
        - key: key1
          operator: Equal
          value: value1
          effect: NoSchedule
        - key: key2
          operator: Equal
          value: value2
          effect: NoExecute
        - key: key3
          operator: Equal
          value: value3
          effect: NoSchedule
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80"
`;

exports[`when value in the set argument is invalid should print the error 1`] = `
"kosko generate [components..]

Generate Kubernetes manifests

Positionals:
  components  Components to generate. This overrides components set in config
              file.                                        [array] [default: []]

Global Options:
      --cwd        Path of working directory             [string] [default: CWD]
      --log-level  Set log level                      [string] [default: "info"]
      --silent     Disable log output                 [boolean] [default: false]
      --help       Show help                                           [boolean]
      --version    Show version number                                 [boolean]

Options:
  -e, --env       Environment name                                      [string]
  -c, --config    Config path. Default to \`kosko.toml\` in current folder.
                                                                        [string]
  -r, --require   Require modules. Modules set in config file will also be
                  required.                                [array] [default: []]
      --loader    Module loader. Loaders set in config file will also be loaded.
                                                           [array] [default: []]
      --bail      Stop immediately when an error occurred.             [boolean]
  -s, --set       Set values on the command line KEY=VAL (can be used multiple
                  times)                                   [array] [default: []]
  -o, --output    Output format
                            [string] [choices: "yaml", "json"] [default: "yaml"]
      --validate  Validate components                  [boolean] [default: true]

Examples:
  kosko generate                      Generate manifests
  kosko generate foo bar              Specify components
  kosko generate foo_*                Use glob pattern
  kosko generate --env foo            Set environment
  kosko generate -r ts-node/register  Require external modules

Cannot parse string "image.registry nginx.io". Expected format is "<key>=<value>"."
`;
